db connection/ insert test
